@@ -4,7 +4,8 @@
  * Fixed on-the-fly Video DVD creation
  * Fixed data project verification in case filenames had to be shortened due to Joliet limitations.
  * Use -dvd-compat parameter to close DVDs in on-the-fly mode.
-
+ * Fixed libdvdcss handling (again), no crashes anymore.
+	
 0.12.14
 =======
  * Make sure new projects are not already marked as modified.
